--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="header-content">
             <div class="logo">DK.PROJECTS</div>
-            <a href="https://portifolio-ten-lake-69.vercel.app" class="back-link">
+            <a href="https://portfolio-dkohl.vercel.app" class="back-link">
                 ← Voltar ao Portfólio
             </a>
         </div>
@@ -83,3 +83,44 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+<!--                <div class="project-card">
+                    <div class="project-image">🛒</div>
+                    <div class="project-info">
+                        <h3>FD Store - E-commerce Platform</h3>
+                        <p class="project-description">
+                            Plataforma de e-commerce com carrinho de compras, sistema de filtros, autenticação e integração com API. Design responsivo com foco em UX. Projeto feito para a empresa FD Store.
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">CSS Modules</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://fdstore.vercel.app" target="_blank" rel="noopener" class="project-link">Ver Demo →</a>
+                        </div>
+                    </div>
+                </div>
+                -->
+
+                <!--                      <div class="project-card">
+                    <div class="project-info">
+                        <h3>Barbearia</h3>
+                        <p class="project-description">
+                            Landing Page para a Barbearia.(projeto pessoal)
+                        </p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">SCSS</span>
+                        </div>
+                        <div class="project-links">
+                            <a target="_blank" href="https://barber-orcin-gamma.vercel.app" class="project-link" rel="noopener">Ver Demo →</a>
+                        </div>
+                    </div>
+                    <div class="project-image img-menor">
+                        <img src="/img/logo.svg" alt="Barber Logo">
+                    </div>
+                </div>
+-->
